Added old notes and summaries

--- a/Bachelors-Uni-Basel/Intro-Condensed-Matter/Notes.tex
+++ b/Bachelors-Uni-Basel/Intro-Condensed-Matter/Notes.tex
@@ -29,7 +29,7 @@
 \title{10878 Physik der Kondensierten Materie\\
         \large Summary
         }
-\author{Reto Flütsch}
+\author{The\_Reto}
 \date{HS 2020}
 
 \begin{document}
